--- a/main.scss
+++ b/main.scss
@@ -2,5 +2,134 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-06 15:38:29
+* @Last Modified time: 2021-01-06 17:59:28
 */
+
+$light-gray: hsl(0, 0%, 98%);
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+}
+
+body {
+    background-color: $light-gray;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.6rem;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: 7rem 1fr;
+}
+
+.header {
+    height: 7rem;
+    background-color: #fff;
+    border-bottom: 1px solid grey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content {
+    margin: 3rem;
+    display: grid;
+    grid-template-rows: 4rem 1fr;
+    grid-row-gap: 2rem;
+
+    &__search {
+        width: 100%;
+        margin-bottom: 2rem;
+        display: grid;
+        justify-items: center;
+    }
+
+    &__countries {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+        grid-row-gap: 4rem;
+        grid-column-gap: 1rem;
+        justify-items: center;
+
+        &-card {
+            width: 35rem;
+            height: 30rem;
+            background-color: #fff;
+            border-radius: .5rem;
+            box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .2);
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
+
+            &-flag {
+            	width: 100%;
+            	height: auto;
+            	object-fit: cover;
+    		}
+
+    		&-info {
+    			height: 100%;
+    			display: flex;
+    			flex-direction: column;
+    			align-items: center;
+    			padding: 1rem;
+    			font-size: 1.3rem;
+
+    			&--boldest {
+    				font-weight: 700;
+    				font-size: 2rem;
+    			}
+
+    			&--bold {
+    				font-weight: 600;
+
+    			}
+
+    			&--light {
+    				font-weight: 400;
+    			}
+    		}
+        }
+    }
+}
+
+.searchbar {
+    font-family: inherit;
+    width: 30rem;
+    height: 4rem;
+    border: .1rem solid #ddd;
+    border-radius: .5rem;
+    box-shadow: 0 .2rem .2rem rgba(0, 0, 0, 0.2);
+    padding: 1rem 1rem 1rem 4rem;
+    background-image: url('images/search.svg');
+    background-repeat: no-repeat;
+    background-position: 1rem .8rem;
+    background-size: 2rem;
+    font-size: 1.5rem;
+
+    &:focus {
+        outline: none;
+    }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(.2rem);
+  z-index: 100;
+}
+
+.hidden {
+    display: none;
+}
