--- a/main.scss
+++ b/main.scss
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-06 17:59:28
+* @Last Modified time: 2021-01-07 16:00:56
 */
 
 $light-gray: hsl(0, 0%, 98%);
@@ -70,7 +70,7 @@ body {
 
             &-flag {
             	width: 100%;
-            	height: auto;
+            	height: 70%;
             	object-fit: cover;
     		}
 
@@ -79,7 +79,7 @@ body {
     			display: flex;
     			flex-direction: column;
     			align-items: center;
-    			padding: 1rem;
+    			padding: 1.2rem;
     			font-size: 1.3rem;
 
     			&--boldest {
@@ -132,4 +132,25 @@ body {
 
 .hidden {
     display: none;
+}
+
+.spinner {
+  margin: 5rem auto;
+  text-align: center;
+
+  img {
+    height: 10rem;
+    width: 10rem;
+    animation: rotate 1s infinite linear;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
