--- a/main.scss
+++ b/main.scss
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-07 16:00:56
+* @Last Modified time: 2021-01-07 16:26:35
 */
 
 $light-gray: hsl(0, 0%, 98%);
@@ -72,6 +72,10 @@ body {
             	width: 100%;
             	height: 70%;
             	object-fit: cover;
+
+                &:hover {
+                    cursor: pointer;
+                }
     		}
 
     		&-info {
@@ -153,4 +157,8 @@ body {
   100% {
     transform: rotate(360deg);
   }
+}
+
+.error {
+    text-align: center;
 }
