--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-07 16:00:56
+* @Last Modified time: 2021-01-07 16:26:35
 */
 * {
   margin: 0;
@@ -59,6 +59,8 @@ body {
         width: 100%;
         height: 70%;
         object-fit: cover; }
+        .content__countries-card-flag:hover {
+          cursor: pointer; }
       .content__countries-card-info {
         height: 100%;
         display: flex;
@@ -116,3 +118,6 @@ body {
     transform: rotate(0); }
   100% {
     transform: rotate(360deg); } }
+
+.error {
+  text-align: center; }
