--- a/main.scss
+++ b/main.scss
@@ -2,10 +2,12 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-07 16:26:35
+* @Last Modified time: 2021-01-07 22:11:17
 */
 
 $light-gray: hsl(0, 0%, 98%);
+$grey: hsl(0, 0%, 58%);
+$white: #fff;
 
 * {
     margin: 0;
@@ -31,8 +33,8 @@ body {
 
 .header {
     height: 7rem;
-    background-color: #fff;
-    border-bottom: 1px solid grey;
+    background-color: $white;
+    border-bottom: .1rem solid $grey;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,7 +63,7 @@ body {
         &-card {
             width: 35rem;
             height: 30rem;
-            background-color: #fff;
+            background-color: $white;
             border-radius: .5rem;
             box-shadow: 0 .2rem .5rem rgba(0, 0, 0, .2);
             display: flex;
@@ -69,37 +71,38 @@ body {
             overflow: hidden;
 
             &-flag {
-            	width: 100%;
-            	height: 70%;
-            	object-fit: cover;
+                width: 100%;
+                height: 70%;
+                object-fit: cover;
+                border-bottom: .1rem solid $grey;
 
                 &:hover {
                     cursor: pointer;
                 }
-    		}
+            }
 
-    		&-info {
-    			height: 100%;
-    			display: flex;
-    			flex-direction: column;
-    			align-items: center;
-    			padding: 1.2rem;
-    			font-size: 1.3rem;
+            &-info {
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 1.2rem;
+                font-size: 1.3rem;
 
-    			&--boldest {
-    				font-weight: 700;
-    				font-size: 2rem;
-    			}
+                &--boldest {
+                    font-weight: 700;
+                    font-size: 2rem;
+                }
 
-    			&--bold {
-    				font-weight: 600;
+                &--bold {
+                    font-weight: 600;
 
-    			}
+                }
 
-    			&--light {
-    				font-weight: 400;
-    			}
-    		}
+                &--light {
+                    font-weight: 400;
+                }
+            }
         }
     }
 }
@@ -124,14 +127,91 @@ body {
 }
 
 .overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(.2rem);
-  z-index: 100;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(.2rem);
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &__content {
+        width: 100rem;
+        height: 50rem;
+        display: flex;
+        background-color: $white;
+        border-radius: .5rem;
+        overflow: hidden;
+        position: relative;
+
+        &-left {
+            width: 50%;
+            display: flex;
+            justify-content: center;
+            background-color: $light-gray;
+
+            &-info {
+                display: flex;
+                flex-direction: column;
+                height: 100%;
+                width: 100%;
+                padding: 5rem;
+                font-size: 2rem;
+
+                justify-content: space-between;
+
+                .boldest {
+                    font-weight: 700;
+                    font-size: 5rem;
+                    align-self: center;
+                }
+
+                .bold {
+                    font-weight: 600;
+                }
+
+                .light {
+                    font-weight: 300;
+                }
+            }
+        }
+
+        &-right {
+            width: 50%;
+        }
+    }
+
+    &__close {
+        font-size: 3rem;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 1rem;
+        color: $grey;
+
+        &:hover {
+            color: rgb(0,0,0);
+            cursor: pointer;
+        }
+    }
+}
+
+.highcharts {
+
+    &-figure {
+        display: grid;
+        align-items: center;
+    }
+
+    &-figure,
+    &-data-table {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .hidden {
@@ -139,24 +219,24 @@ body {
 }
 
 .spinner {
-  margin: 5rem auto;
-  text-align: center;
+    margin: 5rem auto;
+    text-align: center;
 
-  img {
-    height: 10rem;
-    width: 10rem;
-    animation: rotate 1s infinite linear;
-  }
+    img {
+        height: 10rem;
+        width: 10rem;
+        animation: rotate 1s infinite linear;
+    }
 }
 
 @keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
+    0% {
+        transform: rotate(0);
+    }
 
-  100% {
-    transform: rotate(360deg);
-  }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .error {
