--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 * @Author: Gavin
 * @Date:   2021-01-06 15:38:29
 * @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-07 16:26:35
+* @Last Modified time: 2021-01-07 22:11:17
 */
 * {
   margin: 0;
@@ -25,7 +25,7 @@ body {
 .header {
   height: 7rem;
   background-color: #fff;
-  border-bottom: 1px solid grey;
+  border-bottom: 0.1rem solid #949494;
   display: flex;
   justify-content: center;
   align-items: center; }
@@ -58,7 +58,8 @@ body {
       .content__countries-card-flag {
         width: 100%;
         height: 70%;
-        object-fit: cover; }
+        object-fit: cover;
+        border-bottom: 0.1rem solid #949494; }
         .content__countries-card-flag:hover {
           cursor: pointer; }
       .content__countries-card-info {
@@ -100,7 +101,59 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.4);
   backdrop-filter: blur(0.2rem);
-  z-index: 100; }
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .overlay__content {
+    width: 100rem;
+    height: 50rem;
+    display: flex;
+    background-color: #fff;
+    border-radius: .5rem;
+    overflow: hidden;
+    position: relative; }
+    .overlay__content-left {
+      width: 50%;
+      display: flex;
+      justify-content: center;
+      background-color: #fafafa; }
+      .overlay__content-left-info {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        width: 100%;
+        padding: 5rem;
+        font-size: 2rem;
+        justify-content: space-between; }
+        .overlay__content-left-info .boldest {
+          font-weight: 700;
+          font-size: 5rem;
+          align-self: center; }
+        .overlay__content-left-info .bold {
+          font-weight: 600; }
+        .overlay__content-left-info .light {
+          font-weight: 300; }
+    .overlay__content-right {
+      width: 50%; }
+  .overlay__close {
+    font-size: 3rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    color: #949494; }
+    .overlay__close:hover {
+      color: black;
+      cursor: pointer; }
+
+.highcharts-figure {
+  display: grid;
+  align-items: center; }
+
+.highcharts-figure, .highcharts-data-table {
+  width: 100%;
+  height: 100%; }
 
 .hidden {
   display: none; }
