--- a/style.css
+++ b/style.css
@@ -1,212 +1,1 @@
-/*
-* @Author: Gavin
-* @Date:   2021-01-06 15:38:29
-* @Last Modified by:   Gavin
-* @Last Modified time: 2021-01-08 02:10:41
-*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  box-sizing: border-box;
-  font-size: 62.5%; }
-
-body {
-  background-color: #fafafa;
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 1.6rem; }
-
-.container {
-  display: grid;
-  grid-template-rows: 7rem 1fr; }
-
-.header {
-  height: 7rem;
-  background-color: #fff;
-  border-bottom: 0.1rem solid #949494;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-
-.content {
-  margin: 3rem;
-  display: grid;
-  grid-template-rows: 4rem 1fr;
-  grid-row-gap: 2rem; }
-  .content__search {
-    width: 100%;
-    margin-bottom: 2rem;
-    display: grid;
-    justify-items: center; }
-  .content__countries {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
-    grid-row-gap: 4rem;
-    grid-column-gap: 1rem;
-    justify-items: center; }
-    .content__countries-card {
-      width: 35rem;
-      height: 30rem;
-      background-color: #fff;
-      border-radius: .5rem;
-      box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
-      display: flex;
-      flex-direction: column;
-      overflow: hidden; }
-      .content__countries-card-flag {
-        width: 100%;
-        height: 70%;
-        object-fit: cover;
-        border-bottom: 0.1rem solid #949494; }
-        .content__countries-card-flag:hover {
-          cursor: pointer; }
-      .content__countries-card-info {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 1.2rem;
-        font-size: 1.3rem; }
-        .content__countries-card-info--boldest {
-          font-weight: 700;
-          font-size: 2rem; }
-        .content__countries-card-info--bold {
-          font-weight: 600; }
-        .content__countries-card-info--light {
-          font-weight: 400; }
-
-.searchbar {
-  font-family: inherit;
-  width: 30rem;
-  height: 4rem;
-  border: .1rem solid #ddd;
-  border-radius: .5rem;
-  box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.2);
-  padding: 1rem 1rem 1rem 4rem;
-  background-image: url("images/search.svg");
-  background-repeat: no-repeat;
-  background-position: 1rem .8rem;
-  background-size: 2rem;
-  font-size: 1.5rem; }
-  .searchbar:focus {
-    outline: none; }
-
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(0.2rem);
-  z-index: 100;
-  display: flex;
-  justify-content: center;
-  align-items: center; }
-  .overlay__content {
-    width: 90rem;
-    height: 50rem;
-    display: flex;
-    background-color: #fff;
-    border-radius: .5rem;
-    overflow: hidden;
-    position: relative;
-    overflow-y: auto; }
-    @media only screen and (max-width: 56.25em) {
-      .overlay__content {
-        width: 70rem; } }
-    @media only screen and (max-width: 43.75em) {
-      .overlay__content {
-        flex-direction: column;
-        width: 50rem;
-        height: 70rem; } }
-    @media only screen and (max-width: 31.25em) {
-      .overlay__content {
-        width: 40rem;
-        height: 60rem; } }
-    .overlay__content-left {
-      width: 50%;
-      display: flex;
-      justify-content: center;
-      background-color: #fafafa; }
-      @media only screen and (max-width: 43.75em) {
-        .overlay__content-left {
-          width: 100%; } }
-      .overlay__content-left-info {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        width: 100%;
-        padding: 5rem;
-        font-size: 2rem;
-        justify-content: space-between; }
-        .overlay__content-left-info .boldest {
-          font-weight: 700;
-          font-size: 5rem;
-          align-self: center; }
-          @media only screen and (max-width: 43.75em) {
-            .overlay__content-left-info .boldest {
-              align-self: flex-start; } }
-          @media only screen and (max-width: 31.25em) {
-            .overlay__content-left-info .boldest {
-              font-size: 3rem; } }
-        .overlay__content-left-info .bold {
-          font-weight: 600; }
-        .overlay__content-left-info .light {
-          font-weight: 300; }
-    .overlay__content-right {
-      width: 50%; }
-      @media only screen and (max-width: 43.75em) {
-        .overlay__content-right {
-          width: 100%;
-          height: 100%; } }
-  .overlay__close {
-    font-size: 3rem;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding: 1rem;
-    color: #949494; }
-    .overlay__close:hover {
-      color: black;
-      cursor: pointer; }
-
-.highcharts-figure {
-  display: grid;
-  align-items: center; }
-  @media only screen and (max-width: 43.75em) {
-    .highcharts-figure {
-      justify-content: center;
-      align-content: center;
-      height: 100%; } }
-
-.highcharts-figure,
-.highcharts-data-table table {
-  width: 100%;
-  height: 100%; }
-
-.hidden {
-  display: none; }
-
-.spinner {
-  margin: 5rem auto;
-  text-align: center; }
-  .spinner img {
-    height: 10rem;
-    width: 10rem;
-    animation: rotate 1s infinite linear; }
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0); }
-  100% {
-    transform: rotate(360deg); } }
-
-.error {
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); }
+*{margin:0;padding:0;-webkit-box-sizing:inherit;box-sizing:inherit}html{-webkit-box-sizing:border-box;box-sizing:border-box;font-size:62.5%}body{background-color:#fafafa;font-family:'Nunito Sans', sans-serif;font-size:1.6rem}.container{display:grid;grid-template-rows:7rem 1fr}.header{height:7rem;background-color:#fff;border-bottom:0.1rem solid #949494;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.content{margin:3rem;display:grid;grid-template-rows:4rem 1fr;grid-row-gap:2rem}.content__search{width:100%;margin-bottom:2rem;display:grid;justify-items:center}.content__countries{display:grid;grid-template-columns:repeat(auto-fit, minmax(35rem, 1fr));grid-row-gap:4rem;grid-column-gap:1rem;justify-items:center}.content__countries-card{width:35rem;height:30rem;background-color:#fff;border-radius:.5rem;-webkit-box-shadow:0 0.2rem 0.5rem rgba(0,0,0,0.2);box-shadow:0 0.2rem 0.5rem rgba(0,0,0,0.2);display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;overflow:hidden}.content__countries-card-flag{width:100%;height:70%;-o-object-fit:cover;object-fit:cover;border-bottom:0.1rem solid #949494}.content__countries-card-flag:hover{cursor:pointer}.content__countries-card-info{height:100%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:1.2rem;font-size:1.3rem}.content__countries-card-info--boldest{font-weight:700;font-size:2rem}.content__countries-card-info--bold{font-weight:600}.content__countries-card-info--light{font-weight:400}.searchbar{font-family:inherit;width:30rem;height:4rem;border:.1rem solid #ddd;border-radius:.5rem;-webkit-box-shadow:0 0.2rem 0.2rem rgba(0,0,0,0.2);box-shadow:0 0.2rem 0.2rem rgba(0,0,0,0.2);padding:1rem 1rem 1rem 4rem;background-image:url("images/search.svg");background-repeat:no-repeat;background-position:1rem .8rem;background-size:2rem;font-size:1.5rem}.searchbar:focus{outline:none}.overlay{position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,0.4);-webkit-backdrop-filter:blur(0.2rem);backdrop-filter:blur(0.2rem);z-index:100;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center}.overlay__content{width:90rem;height:50rem;display:-webkit-box;display:-ms-flexbox;display:flex;background-color:#fff;border-radius:.5rem;overflow:hidden;position:relative;overflow-y:auto}@media only screen and (max-width: 56.25em){.overlay__content{width:70rem}}@media only screen and (max-width: 43.75em){.overlay__content{-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;width:50rem;height:70rem}}@media only screen and (max-width: 31.25em){.overlay__content{width:40rem;height:60rem}}.overlay__content-left{width:50%;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;background-color:#fafafa}@media only screen and (max-width: 43.75em){.overlay__content-left{width:100%}}.overlay__content-left-info{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;height:100%;width:100%;padding:5rem;font-size:2rem;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between}.overlay__content-left-info .boldest{font-weight:700;font-size:5rem;-ms-flex-item-align:center;align-self:center}@media only screen and (max-width: 43.75em){.overlay__content-left-info .boldest{-ms-flex-item-align:start;align-self:flex-start}}@media only screen and (max-width: 31.25em){.overlay__content-left-info .boldest{font-size:3rem}}.overlay__content-left-info .bold{font-weight:600}.overlay__content-left-info .light{font-weight:300}.overlay__content-right{width:50%}@media only screen and (max-width: 43.75em){.overlay__content-right{width:100%;height:100%}}.overlay__close{font-size:3rem;position:absolute;top:0;right:0;padding:1rem;color:#949494}.overlay__close:hover{color:black;cursor:pointer}.highcharts-figure{display:grid;-webkit-box-align:center;-ms-flex-align:center;align-items:center}@media only screen and (max-width: 43.75em){.highcharts-figure{-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-ms-flex-line-pack:center;align-content:center;height:100%}}.highcharts-figure,.highcharts-data-table table{width:100%;height:100%}.hidden{display:none}.spinner{margin:5rem auto;text-align:center}.spinner img{height:10rem;width:10rem;-webkit-animation:rotate 1s infinite linear;animation:rotate 1s infinite linear}@-webkit-keyframes rotate{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes rotate{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}.error{text-align:center;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%, -50%);transform:translate(-50%, -50%)}
